# tradin_app

./: .gitignore  LICENSE  main.py  pyproject.toml
database/: models.py
