[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["Zayniddin <126386572+tettle2806@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
fastapi = "^0.115.6"
requests = "^2.32.3"
aiogram = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
